CHANGE Photos class and PhotosService